# TnT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  scraper.py  testpro.py
data/csv/: README.md  analyzed_playlist_PLEL2J-7Brhes50MA_1VmohNe4v33UH6Df.csv  analyzed_playlist_PLFf_-1kTMSNH8k_G-51W4w09bgl98AR1x.csv  analyzed_playlist_PL_4c34HZDoN6Ysc_Xw1V3V-M9KESB9bJ9.csv  analyzed_playlist_PL_K7XH1AIG8wZtQSM56Tyc-CR9ypvCbrF.csv  analyzed_playlist_PLgVhcWtOHMTq7_y2VAsfv3sJHDTb8XP9q.csv  analyzed_playlist_PLnwMNodmyz8VCS4nXtd4qu7wP0U0b9y3I.csv  analyzed_speeches_1000_popular.csv  analyzed_speeches_4000_popular.csv
docs/: _config.yml  credits.md  index.md  methods.md  results.md
docs/_includes/: navbar.html
docs/_layouts/: post.html
src/: analyze.py  generate_plots_and_stats.py  main.py  playlist_analyze.py  playlist_scrape_and_analyze.py  playlist_scraper.py  scraper.py  ted_analyze.py  ted_scrape_and_analyze.py  ted_scraper_and_analyze.py
src/analyzers/: playlist_analyze.py  ted_analyze.py
src/models/: knn.py  logreg.py  randomforest.py  svm.py
src/scrapers/: playlist_scraper.py  ted_scraper.py
