[project]
name = "Speech-Pause-Analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "oskarruo",email = "oskar.ruokolainen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "yt-dlp (>=2025.9.5,<2026.0.0)",
    "lxml (>=6.0.1,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
