[project]
name = "Speech-Pause-Analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "oskarruo",email = "oskar.ruokolainen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "yt-dlp (>=2025.9.26,<2026.0.0)",
    "lxml (>=6.0.1,<7.0.0)",
    "myprosody (>=20,<21)",
    "statsmodels (>=0.14.5,<0.15.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
